--- a/Migrate.html
+++ b/Migrate.html
@@ -46,6 +46,7 @@
               type="button"
               class="btn btn-primary btn-block p-2"
               id="migrate_roles"
+              disabled
             >
               migrate_roles
             </button>
@@ -53,6 +54,7 @@
               type="button"
               class="btn btn-primary btn-block p-2"
               id="migrate_users"
+              disabled
             >
               migrate_users
             </button>
