added old students

--- a/Migrate.html
+++ b/Migrate.html
@@ -28,6 +28,13 @@
             >
               migrate_students
             </button>
+             <button
+              type="button"
+              class="btn btn-primary btn-block p-2"
+              id="migrate_old_students"
+            >
+              migrate_old_students
+            </button>
             <button
               type="button"
               class="btn btn-primary btn-block p-2"
@@ -193,6 +200,7 @@
       // Array of button ids
       const buttonIds = [
         "migrate_students",
+        "migrate_old_students",
         "migrate_fee_types",
         "migrate_expenses",
         "migrate_users",
