added relieve amounts

--- a/Migrate.html
+++ b/Migrate.html
@@ -86,6 +86,14 @@
             >
               migrate_branchStudents
             </button>
+              </button>
+            <button
+              type="button"
+              class="btn btn-primary btn-block p-2"
+              id="migrate_relievedAmounts"
+            >
+              migrate_relievedAmounts
+            </button>
             <button
               type="button"
               class="btn btn-primary btn-block p-2"
@@ -159,6 +167,13 @@
             <button
               type="button"
               class="btn btn-danger btn-block p-2"
+              id="delete_relievedAmounts"
+            >
+              delete_relievedAmounts
+            </button>
+            <button
+              type="button"
+              class="btn btn-danger btn-block p-2"
               id="delete_transactions"
             >
               delete_transactions
@@ -209,6 +224,8 @@
         "migrate_branchFees",
         "migrate_branchStudents",
         "migrate_transactions",
+        "migrate_relievedAmounts",
+
         "delete_students",
         "delete_fee_types",
         "delete_expenses",
@@ -218,6 +235,8 @@
         "delete_branche_fees",
         "delete_branchStudents",
         "delete_transactions",
+        "delete_relievedAmounts"
+
       ];
 
       // Attach event listeners to each button
